Change test case to ParameterizedTest
Signed-off-by: Gabriel Trintinalia <gabriel.trintinalia@gmail.com>